--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,7 @@
     <p>Email: <a href="mailto:info@sweetbuns.com">info@sweetbuns.com</a></p>
     <p>Phone: +27 123 456 789</p>
     <p>Address: 45 Bakery Street, Cape Town, South Africa</p>
+    <p> Instagram:sweetbunsOffical TikTok:SweetBunsOffical</p>
   </header>
 
   <footer>
