--- a/homepage.html
+++ b/homepage.html
@@ -21,7 +21,11 @@
 
   <!-- Homepage Content -->
   <header>
-    <h1>Welcome to Sweet Buns Bakery</h1>
+    <body>
+  <h1>Welcome to Sweet Buns Bakery</h1>
+  <img src="sweet treat.jp" alt="Delicious cake" width="300">
+</body>
+
     <p>Cape Town’s community bakery – fresh, affordable, and made with love.  
        <br>From artisanal breads to vegan and gluten-free treats, we have something for everyone.</p>
   </header>
