added a proper formated image

--- a/enquiry.html
+++ b/enquiry.html
@@ -18,7 +18,7 @@
       <li><button onclick="location.href='contact.html'">Contact</button></li>
     </ul>
   </nav>
-
+<!-- for all infromation retaining to enquiries-->
   <header>
     <h1>Make an Enquiry</h1>
     <p>Have a question about our products, custom cakes, or catering? Fill out the form below and we’ll get back to you soon.</p>
@@ -36,7 +36,7 @@
       <button type="submit">Send Enquiry</button>
     </form>
   </header>
-
+<!--added email field,text field and number field-->
   <footer>
     <p>&copy; 2025 Sweet Buns Bakery</p>
   </footer>
