--- a/homepage.html
+++ b/homepage.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -19,13 +20,10 @@
     </ul>
   </nav>
 
-  <!-- Homepage Content -->
+  <!-- added an image to the homepage -->
   <header>
-    <body>
-  <h1>Welcome to Sweet Buns Bakery</h1>
-  <img src="sweet treat.jp" alt="Delicious cake" width="300">
-</body>
-
+    <h1>Welcome to Sweet Buns Bakery</h1>
+    <img src="images/sweet treat.jpeg" alt="Delicious cake" width="300" height="400">
     <p>Cape Town’s community bakery – fresh, affordable, and made with love.  
        <br>From artisanal breads to vegan and gluten-free treats, we have something for everyone.</p>
   </header>
