--- a/services.html
+++ b/services.html
@@ -29,7 +29,7 @@
       <li>Daily fresh breads, pastries, and cakes</li>
       <li>Vegan, gluten-free, and reduced-sugar options</li>
       <li>Custom cakes for birthdays and events</li>
-      <li>Catering for small businesses and events</li>
+      <li>Catering for small businesses and events whenever </li>
       <li>Seasonal specials and creative desserts</li>
     </ul>
 
