added more features onto the website

--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,44 +7,60 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <!-- Navigation -->
   <nav>
-    <h2 class="logo">Sweet Buns</h2>
+    <h1 class="logo">Sweet Buns</h1>
     <ul>
-      <li><button onclick="location.href='homepage.html'">Home</button></li>
-      <li><button onclick="location.href='about.html'" class="active">About Us</button></li>
-      <li><button onclick="location.href='services.html'">Services</button></li>
-      <li><button onclick="location.href='enquiry.html'">Enquiry</button></li>
-      <li><button onclick="location.href='contact.html'">Contact</button></li>
+      <li><a href="homepage.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="enquiry.html">Enquiry</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
+  <!-- Page header -->
   <header>
     <h1>Our Story</h1>
-    <p>Sweet Buns Bakery was founded in 2017 by Thato and Michael, two friends passionate about baking.  
-       What started as a weekend market stall quickly grew into a neighborhood bakery loved for its fresh bread, cakes, and pastries.</p>
+    <p>
+      Sweet Buns Bakery was founded in 2017 by Thato and Michael, two friends passionate about baking.  
+      What started as a weekend market stall quickly grew into a neighborhood bakery loved for its fresh bread, cakes, and pastries.
+    </p>
   </header>
 
-  <section>
-    <h2>Mission</h2>
-    <ul>
-      <li>Serve freshly baked goods at fair prices</li>
-      <li>Support local farmers with sustainable ingredients</li>
-      <li>Create a warm, community-driven bakery space</li>
-      <li>Maintain the highest quality and taste standards</li>
-      <li>Blend traditional recipes with modern tastes</li>
-    </ul>
+  <!-- Main content area -->
+  <main class="content">
+    <section class="intro">
+      <h2>Mission</h2>
+      <ul>
+        <li>Serve freshly baked goods at fair prices</li>
+        <li>Support local farmers with sustainable ingredients</li>
+        <li>Create a warm, community-driven bakery space</li>
+        <li>Maintain the highest quality and taste standards</li>
+        <li>Blend traditional recipes with modern tastes</li>
+      </ul>
 
-    <h2>Vision</h2>
-    <ul>
-      <li>Be Cape Town’s most trusted and loved bakery</li>
-      <li>Grow steadily while keeping a family-style atmosphere</li>
-      <li>Encourage healthy eating with fresh, local produce</li>
-      <li>Build an online presence to connect with more people</li>
-    </ul>
-  </section>
+      <h2>Vision</h2>
+      <ul>
+        <li>Be Cape Town’s most trusted and loved bakery</li>
+        <li>Grow steadily while keeping a family-style atmosphere</li>
+        <li>Encourage healthy eating with fresh, local produce</li>
+        <li>Build an online presence to connect with more people</li>
+      </ul>
+    </section>
 
+    <aside class="sidebar">
+      <h3>Specials</h3>
+      <p>Check our seasonal treats and custom cakes available this week.</p>
+    </aside>
+  </main>
+
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Sweet Buns Bakery</p>
   </footer>
+
 </body>
 </html>
+
