--- a/contact.html
+++ b/contact.html
@@ -7,27 +7,45 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <!-- Navigation -->
   <nav>
-    <h2 class="logo">Sweet Buns</h2>
+    <h1 class="logo">Sweet Buns</h1>
     <ul>
-      <li><button onclick="location.href='homepage.html'">Home</button></li>
-      <li><button onclick="location.href='about.html'">About Us</button></li>
-      <li><button onclick="location.href='services.html'">Services</button></li>
-      <li><button onclick="location.href='enquiry.html'">Enquiry</button></li>
-      <li><button onclick="location.href='contact.html'" class="active">Contact</button></li>
+      <li><a href="homepage.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="enquiry.html">Enquiry</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
+  <!-- Page header -->
   <header>
     <h1>Contact Sweet Buns</h1>
     <p>Email: <a href="mailto:info@sweetbuns.com">info@sweetbuns.com</a></p>
     <p>Phone: +27 123 456 789</p>
     <p>Address: 45 Bakery Street, Cape Town, South Africa</p>
-    <p> Instagram:sweetbunsOffical TikTok:SweetBunsOffical</p>
+    <p>Instagram: sweetbunsOfficial | TikTok: SweetBunsOfficial</p>
   </header>
 
+  <!-- Main content area -->
+  <main class="content">
+    <section class="intro">
+      <p>We’re here to answer any questions about our bakery, products, or services. Reach out via email, phone, or social media!</p>
+    </section>
+
+    <aside class="sidebar">
+      <h3>Specials</h3>
+      <p>Check our seasonal treats and custom cakes available this week.</p>
+    </aside>
+  </main>
+
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Sweet Buns Bakery</p>
   </footer>
+
 </body>
 </html>
+
