--- a/services.html
+++ b/services.html
@@ -7,47 +7,60 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+
+  <!-- Navigation -->
   <nav>
-    <h2 class="logo">Sweet Buns</h2>
+    <h1 class="logo">Sweet Buns</h1>
     <ul>
-      <li><button onclick="location.href='homepage.html'">Home</button></li>
-      <li><button onclick="location.href='about.html'">About Us</button></li>
-      <li><button onclick="location.href='services.html'" class="active">Services</button></li>
-      <li><button onclick="location.href='enquiry.html'">Enquiry</button></li>
-      <li><button onclick="location.href='contact.html'">Contact</button></li>
+      <li><a href="homepage.html">Home</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a href="enquiry.html">Enquiry</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
+  <!-- Page header -->
   <header>
     <h1>Our Services</h1>
     <p>We provide more than just baked goods – Sweet Buns is about community, quality, and innovation.</p>
   </header>
 
-  <section>
-    <h2>What We Offer</h2>
-    <ul>
-      <li>Daily fresh breads, pastries, and cakes</li>
-      <li>Vegan, gluten-free, and reduced-sugar options</li>
-      <li>Custom cakes for birthdays and events</li>
-      <li>Catering for small businesses and events whenever </li>
-      <li>Seasonal specials and creative desserts</li>
-    </ul>
+  <!-- Main content area -->
+  <main class="content">
+    <section class="intro">
+      <h2>What We Offer</h2>
+      <ul>
+        <li>Daily fresh breads, pastries, and cakes</li>
+        <li>Vegan, gluten-free, and reduced-sugar options</li>
+        <li>Custom cakes for birthdays and events</li>
+        <li>Catering for small businesses and events</li>
+        <li>Seasonal specials and creative desserts</li>
+      </ul>
 
-    <h2>Target Audience</h2>
-    <p>We proudly serve families, students, professionals, health-conscious customers, and tourists – plus partner with local cafés and businesses.</p>
+      <h2>Target Audience</h2>
+      <p>We proudly serve families, students, professionals, health-conscious customers, and tourists – plus partner with local cafés and businesses.</p>
 
-    <h2>Website Goals</h2>
-    <ul>
-      <li>Boost online visibility and attract new customers</li>
-      <li>Enable online orders and delivery</li>
-      <li>Promote seasonal specials & custom cakes</li>
-      <li>Offer loyalty rewards and promotions</li>
-      <li>Improve communication with live chat & enquiries</li>
-    </ul>
-  </section>
+      <h2>Website Goals</h2>
+      <ul>
+        <li>Boost online visibility and attract new customers</li>
+        <li>Enable online orders and delivery</li>
+        <li>Promote seasonal specials & custom cakes</li>
+        <li>Offer loyalty rewards and promotions</li>
+        <li>Improve communication with live chat & enquiries</li>
+      </ul>
+    </section>
 
+    <aside class="sidebar">
+      <h3>Specials</h3>
+      <p>Check our seasonal treats and custom cakes available this week.</p>
+    </aside>
+  </main>
+
+  <!-- Footer -->
   <footer>
     <p>&copy; 2025 Sweet Buns Bakery</p>
   </footer>
+
 </body>
 </html>
