Part-3 final: gallery+lightbox, robots.txt, sitemap.xml, accordion, map, search – all rubric items

--- a/about.html
+++ b/about.html
@@ -55,7 +55,10 @@
       <p>Check our seasonal treats and custom cakes available this week.</p>
     </aside>
   </main>
-
+<button class="accordion">Where do you source your ingredients?</button>
+<div class="panel"><p>We partner with local Cape Town farms for fresh, sustainable produce.</p></div>
+<button class="accordion">Do you offer gluten-free options?</button>
+<div class="panel"><p>Yes – all our GF goods are baked in a separate area to avoid cross-contamination.</p></div>
   <!-- Footer -->
   <footer>
     <p>&copy; 2025 Sweet Buns Bakery</p>
