updated each page with the same style,added search bar and sitemap,inclduing gallry

--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,8 @@
 <!-- gallery.html  (lightbox included) -->
 <!doctype html>
 <html lang="en">
+<nav>
+</nav>
 <head>
   <meta charset="utf-8">
   <title>Gallery | Sweet Buns Bakery</title>
