--- a/homepage.html
+++ b/homepage.html
@@ -9,17 +9,18 @@
 <body>
 
   <!-- this is the Navigation for the homepage-->
-  <nav>
-    <h1 class="logo">Sweet Buns</h1>
-    <ul>
-      <li><a href="homepage.html">Home</a></li>
-      <li><a href="about.html">About Us</a></li>
-      <li><a href="services.html">Services</a></li>
-      <li><a href="enquiry.html">Enquiry</a></li>
-      <li><a href="contact.html">Contact</a></li>
-    </ul>
-  </nav>
-
+  
+<nav>
+  <h1 class="logo">Sweet Buns</h1>
+  <ul>
+    <li><a href="homepage.html">Home</a></li>
+    <li><a href="about.html">About Us</a></li>
+    <li><a href="services.html">Services</a></li>
+    <li><a href="gallery.html">Gallery</a></li>
+    <li><a href="enquiry.html">Enquiry</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
   <!-- Page header with the main image of the screen -->
   <header>
     <h1>Welcome to Sweet Buns Bakery</h1>
